@@ -27,7 +27,10 @@
  * \file 
  * Contains the code for the emulated DecChip 21264CB EV68 Alpha processor.
  *
- * $Id: AlphaCPU.cpp,v 1.66 2008/02/05 15:51:33 iamcamiel Exp $
+ * $Id: AlphaCPU.cpp,v 1.67 2008/02/08 20:08:13 iamcamiel Exp $
+ *
+ * X-1.67       Camiel Vanderhoeven                             08-FEB-2008
+ *      Show originating device name on memory errors.
  *
  * X-1.66       Camiel Vanderhoeven                             05-FEB-2008
  *      Only use new floating-point code when HAVE_NEW_FP has been defined.
@@ -338,7 +341,7 @@ CAlphaCPU::CAlphaCPU(CConfigurator * cfg, CSystem * system) : CSystemComponent (
   bListing = false;
 #endif
   
-  printf("%s: $Id: AlphaCPU.cpp,v 1.66 2008/02/05 15:51:33 iamcamiel Exp $\n",devid_string);
+  printf("%s: $Id: AlphaCPU.cpp,v 1.67 2008/02/08 20:08:13 iamcamiel Exp $\n",devid_string);
 }
 
 /**
@@ -509,7 +512,7 @@ int CAlphaCPU::DoClock()
     if (get_icache(state.pc, &ins))
       return 0;
   } else {
-    ins = (u32)(cSystem->ReadMem(state.pc,32));
+    ins = (u32)(cSystem->ReadMem(state.pc,32,this));
   }
 
   next_pc();
